fixing background image on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,8 @@ body, html, #navbar {
 @media only screen and (min-device-width : 320px) and (max-device-width : 450px) {
     body, html, #navbar {
       background: url('../images/spectra-background.jpg');
+      height: 100%;
+      width: 100%;
       background-repeat: no-repeat;
       background-attachment: fixed;
     }
@@ -24,6 +26,8 @@ body, html, #navbar {
   @media screen and (min-width: 768px) {
     body, html, #navbar {
       background: url('../images/spectra-background.jpg');
+      height: 100%;
+      width: 100%;
       background-repeat: no-repeat;
       background-attachment: fixed;
     }
